<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TableLayout
        android:layout_width="379dp"
        android:layout_height="178dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTen"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtTen" />

            <TextView
                android:id="@+id/txtXuatTen"
                android:layout_width="147dp"
                android:layout_height="match_parent"
                android:text="@string/txtXuatTen" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtSDT"
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtSDT" />

            <TextView
                android:id="@+id/txtXuatSDT"
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtXuatSDT" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtThanhVien"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/txtThanhVien" />

            <TextView
                android:id="@+id/txtXuatVip"
                android:layout_width="109dp"
                android:layout_height="match_parent"
                android:text="@string/txtXuatVip" />

            <TextView
                android:id="@+id/txtXuatThuong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtXuatThuong" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtLoaiVe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLoaiVe" />

            <TextView
                android:id="@+id/txtXuatGiuongNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtXuatGiuongNam" />

            <TextView
                android:id="@+id/txtXuatGheNgoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtXuatGheNgoi" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtDichVu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtDichVu" />

            <TextView
                android:id="@+id/txtXuatDichVu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtXuatDichVu" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>